--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.9.2",
+    "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
