--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "image-viewer",
-  "version": "0.1.0",
-  "description": "Simple jQuery plugin for viewing a set of images quickly and easily.",
+  "version": "0.3.0",
+  "description": "A simple, lightweight jQuery plugin to quickly browse a list of viewport-scaled images.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://cdbusby@bitbucket.org/cdbusby/image-viewer.git"
+    "url": "https://github.com/cdbusby/image-viewer.git"
   },
   "keywords": [
     "jquery",
